sass/includes/search/_search-results__list-card.scss
.search-results__list-card {
  list-style: none;
  padding: 1rem;
  //border: 1px solid $color__grey-500;
  //border-bottom: 3px solid $color__grey-300;
    border-bottom: 1px solid #8c9694;
  //border-radius: 0.3rem;
  margin-bottom: 0.5rem;
  display: flex;
  flex-wrap: wrap;
    min-height:320px;
    padding-bottom: 2rem;
    @media only screen and (max-width: 57rem) {
        padding-bottom:0;
    }

  &--grid {
    @extend .search-results__list-card;
    @media only screen and (min-width: 57rem) {
      width: 48%;
    }
    margin-right: 1rem;
  }

  &-item {
      margin-bottom:0;
  }

  &-heading {
      font-family: $font__supria-sans;
      font-size: 1.7rem;
      letter-spacing: 0.05rem;

    @media only screen and (min-width: 57rem) {
      margin-top: 0;
        max-width:90%;
    }
  }

  &-full-width-image img {
    width: 100%;
    //display:block;
    //overflow:hidden;
    //max-width:70%;
  }

  &-content {
    margin-right: auto;
    margin-bottom: 2rem;
    padding-right: 1rem;
    //max-width: 46rem;
    @media only screen and (min-width: 57rem) {
    }
  }

  &-link {
    color: $color__navy;

    &:visited {
      color: $color__navy;

    }
  }

  &-description {
    margin-bottom: 0.5rem;
    max-width:90%;
  }

  &-delivery-options {
    margin-right: 1rem;

    &-img {
      //border: 1px solid $color__grey-500;
    }
  }

  &-desc {
    max-width: 12rem;
    margin-bottom: 0;
    margin-top: 0.2rem;
  }

  &-link {
    display: block;
  }
  
  &-description {
    margin-bottom: 0.5rem;
    //max-width:70%;
    font-weight: 100;
  }

  &-metadata-item {
    font-weight:100;
    line-height:2em;
  }

  &-metadata-item-held-by-icon {
      list-style-image: url(/static/images/icons/search-archive-icon.svg);
  }

  &-metadata-item-date-icon{
      list-style-image: url(/static/images/icons/search-calendar-icon.svg);
  }

  &-metadata-item-data-icon{
      list-style-image: url(/static/images/icons/search-data-icon.svg);
  }

  &-metadata-item-subjects-icon{
      //list-style-image: url(/static/images/icons/search-tag-icon.svg);
      list-style-type: none;
  }

  &-delivery-options {
    //margin-right: 1rem;
    //&-img {
        //border: 1px solid $color__grey-3;
        //width:100%;
    //}
    &-desc {
      //max-width: 12rem;
      //max-width: 100%;
      width:183px;
      margin-bottom: 0;
      //margin-top: 0.2rem;
      padding:1em 2em;
      background:black;
      text-align: center;
    }

    &-link {
      display: block;
      color: white;
      text-decoration: none;
    }

    &-link:hover {
      color:white;
    }

    &-link:visited {
      color:white;
    }

    @media only screen and (max-width: $screen__md) {
      margin-left: auto;
      margin-right: auto;
      text-align: center;
      //margin-top:1em;
      &-desc {
          max-width: 100%;
          margin:auto;
      }
    }

    &--grid {
      @extend .search-results__list-card-delivery-options;

      &-desc {
          max-width: 100%;

      }
    }

    @media only screen and (max-width: $screen__md) {
      margin-left: auto;
      margin-right: auto;
      text-align: center;
      &-desc {
        max-width: 100%;
      }
    }

    &--grid {
      @extend .search-results__list-card-delivery-options;
      &-desc {
        max-width: 100%;
      }
    }
  }
}


.search-list-image {
  position: absolute;
  right:50px;
  @media only screen and (max-width: 1320px) {
    right:80px;
  }
  @media only screen and (max-width: 1080px) {
    right:120px;
  }
  @media only screen and (max-width: 768px) {
    position: unset;
  }

}

.search-image-grid,
.search-results-grid{
  width:100%;
}

.search-results__list-card-metadata {
    padding-left:1.5rem;

}

